--- a/config/sync/core.entity_view_display.paragraph.vih_ordered_course_person.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_ordered_course_person.default.yml
@@ -3,13 +3,18 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_address
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_birthdate
+    - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_city
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_comment
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_cpr
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_email
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_first_name
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_last_name
+    - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_municipality
+    - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_newsletter
     - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_ordered_options
+    - field.field.paragraph.vih_ordered_course_person.field_vih_ocp_zip
     - paragraphs.paragraphs_type.vih_ordered_course_person
   module:
     - datetime
@@ -19,6 +24,14 @@ targetEntityType: paragraph
 bundle: vih_ordered_course_person
 mode: default
 content:
+  field_vih_ocp_address:
+    weight: 7
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_vih_ocp_birthdate:
     weight: 5
     label: hidden
@@ -27,6 +40,14 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
+    region: content
+  field_vih_ocp_city:
+    weight: 8
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_vih_ocp_comment:
     weight: 6
@@ -66,6 +87,24 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_vih_ocp_municipality:
+    weight: 10
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_vih_ocp_newsletter:
+    weight: 11
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
   field_vih_ocp_ordered_options:
     type: entity_reference_revisions_entity_view
     weight: 4
@@ -74,5 +113,13 @@ content:
       view_mode: embedded
       link: ''
     third_party_settings: {  }
+    region: content
+  field_vih_ocp_zip:
+    weight: 9
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
 hidden: {  }
