VI-241 Config sync

--- a/config/sync/core.entity_view_display.paragraph.vih_ordered_course_person.email_teaser.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_ordered_course_person.email_teaser.yml
@@ -59,5 +59,10 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_vih_ocp_address: true
   field_vih_ocp_birthdate: true
+  field_vih_ocp_city: true
   field_vih_ocp_comment: true
+  field_vih_ocp_municipality: true
+  field_vih_ocp_newsletter: true
+  field_vih_ocp_zip: true
