--- a/config/sync/core.entity_view_display.user.user.teaser.yml
+++ b/config/sync/core.entity_view_display.user.user.teaser.yml
@@ -87,6 +87,7 @@ hidden:
   field_vih_user_birthday: true
   field_vih_user_descr: true
   field_vih_user_paragraphs: true
+  field_vih_user_qualifications: true
   field_vih_user_title: true
   field_vih_user_type_id: true
   langcode: true
