--- a/config/sync/language.content_settings.node.vih_event_order.yml
+++ b/config/sync/language.content_settings.node.vih_event_order.yml
@@ -4,6 +4,9 @@ status: true
 dependencies:
   config:
     - node.type.vih_event_order
+third_party_settings:
+  content_translation:
+    enabled: false
 id: node.vih_event_order
 target_entity_type_id: node
 target_bundle: vih_event_order
