--- a/config/sync/language.content_settings.block_content.notify.yml
+++ b/config/sync/language.content_settings.block_content.notify.yml
@@ -4,6 +4,9 @@ status: true
 dependencies:
   config:
     - block_content.type.notify
+third_party_settings:
+  content_translation:
+    enabled: false
 id: block_content.notify
 target_entity_type_id: block_content
 target_bundle: notify
