--- a/config/sync/language.content_settings.media.image.yml
+++ b/config/sync/language.content_settings.media.image.yml
@@ -4,6 +4,9 @@ status: true
 dependencies:
   config:
     - media.type.image
+third_party_settings:
+  content_translation:
+    enabled: false
 id: media.image
 target_entity_type_id: media
 target_bundle: image
