--- a/config/sync/views.view.employees.yml
+++ b/config/sync/views.view.employees.yml
@@ -123,13 +123,26 @@ display:
       sorts: {  }
       header: {  }
       footer: {  }
-      empty: {  }
+      empty:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content:
+            value: 'Currently no employees to show here.'
+            format: rich_text
+          plugin_id: text
       relationships: {  }
       arguments:
-        field_user_type_id_target_id:
-          id: field_user_type_id_target_id
-          table: user__field_user_type_id
-          field: field_user_type_id_target_id
+        field_vih_user_type_id_target_id:
+          id: field_vih_user_type_id_target_id
+          table: user__field_vih_user_type_id
+          field: field_vih_user_type_id_target_id
           relationship: none
           group_type: group
           admin_label: ''
