--- a/config/sync/field.field.node.page.field_vih_paragraphs.yml
+++ b/config/sync/field.field.node.page.field_vih_paragraphs.yml
@@ -13,6 +13,7 @@ dependencies:
     - paragraphs.paragraphs_type.file
     - paragraphs.paragraphs_type.gallery
     - paragraphs.paragraphs_type.list_of_news_teasers
+    - paragraphs.paragraphs_type.long_course_list_
     - paragraphs.paragraphs_type.short_course_list_
     - paragraphs.paragraphs_type.social_media_embed
     - paragraphs.paragraphs_type.user_quote
@@ -46,6 +47,7 @@ settings:
       file: file
       gallery: gallery
       list_of_news_teasers: list_of_news_teasers
+      long_course_list_: long_course_list_
       short_course_list_: short_course_list_
       social_media_embed: social_media_embed
       user_quote: user_quote
@@ -80,8 +82,8 @@ settings:
         enabled: true
         weight: 33
       long_course_list_:
+        enabled: true
         weight: 34
-        enabled: false
       short_course_list_:
         enabled: true
         weight: 35
