--- a/config/sync/field.field.taxonomy_term.vih_class_package.field_vih_banner.yml
+++ b/config/sync/field.field.taxonomy_term.vih_class_package.field_vih_banner.yml
@@ -7,6 +7,12 @@ dependencies:
     - taxonomy.vocabulary.vih_class_package
   module:
     - image
+third_party_settings:
+  content_translation:
+    translation_sync:
+      file: '0'
+      alt: '0'
+      title: '0'
 id: taxonomy_term.vih_class_package.field_vih_banner
 field_name: field_vih_banner
 entity_type: taxonomy_term
