--- a/config/sync/core.entity_view_display.user.user.teaser.yml
+++ b/config/sync/core.entity_view_display.user.user.teaser.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.teaser
-    - field.field.user.user.field_vih_banner
     - field.field.user.user.field_vih_top_banner
     - field.field.user.user.field_vih_user_birthday
     - field.field.user.user.field_vih_user_descr
@@ -15,6 +14,7 @@ dependencies:
     - field.field.user.user.field_vih_user_paragraphs
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
+    - field.field.user.user.field_vih_user_qualifications
     - field.field.user.user.field_vih_user_title
     - field.field.user.user.field_vih_user_type_id
     - image.style.vih_person_teaser
@@ -82,7 +82,6 @@ content:
       image_link: ''
     third_party_settings: {  }
 hidden:
-  field_vih_banner: true
   field_vih_top_banner: true
   field_vih_user_birthday: true
   field_vih_user_descr: true
