--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,8 @@
         "drupal/advagg": "^3.4",
         "drupal/focal_point": "^1.0@beta",
         "drupal/schema_metatag": "^1.0",
-        "drupal/warden": "^1.1"
+        "drupal/warden": "^1.1",
+        "drupal/views_send": "^1.3"
     },
     "repositories": [
         {
