--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -106,6 +106,7 @@ module:
   video_embed_media: 0
   video_embed_wysiwyg: 0
   views_infinite_scroll: 0
+  views_send: 0
   views_ui: 0
   viewsreference: 0
   vih_subscription: 0
