VI-220 Terms and conditions in modal

--- a/docroot/modules/custom/vih_subscription/vih_subscription.libraries.yml
+++ b/docroot/modules/custom/vih_subscription/vih_subscription.libraries.yml
@@ -5,3 +5,10 @@ vih-subscription-accordion-class-selection:
   dependencies:
     - core/jquery
     - core/drupalSettings
+vih-subscription-terms-and-conditions-modal:
+  version: 1.x
+  js:
+    js/vih_subscription-terms-and-conditions.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupalSettings
