--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         "drupal/entity_clone": "1.x-dev",
         "drupal/coffee": "1.x-dev",
         "drupal/field_group": "3.x-dev",
-        "drupal/photoswipe": "1.0-beta3",
+        "drupal/photoswipe": "1.0-beta4",
         "drupal/context": "4.0-beta2",
         "drupal/media_entity_facebook": "2.0-alpha1",
         "drupal/url_embed": "1.x-dev",
@@ -112,6 +112,10 @@
         "patches": {
             "drupal/core": {
                 "2868294 - Call to a member function getThirdPartySetting() on null in ContentTranslationManager": "https://www.drupal.org/files/issues/2868294-12.patch"
+            },
+            "drupal/photoswipe": {
+                "2921487 - Load PhotoSwipe on all non-admin pages" : "https://www.drupal.org/files/issues/edit_load_photoswipe_on-2921487-2.patch",
+                "2894797 - Multiple galleries: opens the wrong image" : "https://www.drupal.org/files/issues/fix-image-index-2894797.patch"
             }
         }
     }
