--- a/config/sync/photoswipe.settings.yml
+++ b/config/sync/photoswipe.settings.yml
@@ -1,4 +1,4 @@
-photoswipe_always_load_non_admin: false
+photoswipe_always_load_non_admin: true
 options:
   showAnimationDuration: 333
   hideAnimationDuration: 333
@@ -25,3 +25,7 @@ options:
 _core:
   default_config_hash: V8V4qoFWUmhf9Atc_VX3qfO2bgt4z7cF4YCm7hlVdeY
 langcode: da
+actions: null
+form_build_id: form--L0U84ZUJ_Th4aykthOlXjZgZ46yq8XfxMrzpyaU7RA
+form_token: 47RznjrFIXzmUw5o2wKN2QN8qiNsE_RE3kdojCHuIVg
+form_id: photoswipe_admin_settings
