VI-168 using original image for focal point

--- a/config/sync/core.entity_form_display.media.image.default.yml
+++ b/config/sync/core.entity_form_display.media.image.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.media.image.field_media_in_library
     - field.field.media.image.image
-    - image.style.crop_focal_point
+    - image.style.original
     - media.type.image
   module:
     - focal_point
@@ -30,7 +30,7 @@ content:
     type: image_focal_point
     weight: 0
     settings:
-      preview_image_style: crop_focal_point
+      preview_image_style: original
       progress_indicator: throbber
       preview_link: true
       offsets: '50,50'
