--- a/config/sync/views.view.long_courses.yml
+++ b/config/sync/views.view.long_courses.yml
@@ -14,6 +14,7 @@ dependencies:
     - datetime
     - image
     - node
+    - paragraphs
     - text
     - user
 id: long_courses
@@ -586,6 +587,166 @@ display:
         type: none
         options:
           offset: 0
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
+        - 'user.node_grants:view'
+        - user.permissions
+      tags:
+        - 'config:field.storage.node.body'
+        - 'config:field.storage.node.field_vih_course_image'
+        - 'config:field.storage.node.field_vih_course_periods'
+        - 'config:field.storage.node.field_vih_cp_start_date'
+  embed_list_advanced_contain_class:
+    display_plugin: embed
+    id: embed_list_advanced_contain_class
+    display_title: 'Embed - list advanced - contain class'
+    position: 2
+    display_options:
+      display_extenders: {  }
+      title: ''
+      defaults:
+        title: false
+        arguments: false
+        filters: false
+        filter_groups: false
+        relationships: false
+        pager: false
+        group_by: false
+        query: false
+      display_description: ''
+      arguments:
+        field_vih_cs_classes_target_id:
+          id: field_vih_cs_classes_target_id
+          table: paragraph__field_vih_cs_classes
+          field: field_vih_cs_classes_target_id
+          relationship: field_vih_cp_course_slots
+          group_type: group
+          admin_label: ''
+          default_action: 'not found'
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: fixed
+          default_argument_options:
+            argument: '18'
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
+          plugin_id: numeric
+      filters:
+        status:
+          value: '1'
+          table: node_field_data
+          field: status
+          plugin_id: boolean
+          entity_type: node
+          entity_field: status
+          id: status
+          expose:
+            operator: ''
+          group: 1
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            min: ''
+            max: ''
+            value: ''
+            vih_long_cource: vih_long_cource
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            argument: null
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      relationships:
+        field_vih_course_periods:
+          id: field_vih_course_periods
+          table: node__field_vih_course_periods
+          field: field_vih_course_periods
+          relationship: none
+          group_type: group
+          admin_label: 'field_vih_course_periods: Content'
+          required: true
+          plugin_id: standard
+        field_vih_cp_course_slots:
+          id: field_vih_cp_course_slots
+          table: node__field_vih_cp_course_slots
+          field: field_vih_cp_course_slots
+          relationship: field_vih_course_periods
+          group_type: group
+          admin_label: 'field_vih_cp_course_slots: Paragraph'
+          required: true
+          plugin_id: standard
+      pager:
+        type: some
+        options:
+          items_per_page: 25
+          offset: 0
+      group_by: true
+      query:
+        type: views_query
+        options:
+          disable_sql_rewrite: false
+          distinct: false
+          replica: false
+          query_comment: ''
+          query_tags: {  }
     cache_metadata:
       max-age: -1
       contexts:
