--- a/config/sync/field.field.node.page.field_vih_paragraphs.yml
+++ b/config/sync/field.field.node.page.field_vih_paragraphs.yml
@@ -20,7 +20,6 @@ dependencies:
     - paragraphs.paragraphs_type.video
     - paragraphs.paragraphs_type.vih_class_groups_accordion
     - paragraphs.paragraphs_type.vih_content_grid
-    - paragraphs.paragraphs_type.vih_single_class_group
     - paragraphs.paragraphs_type.vih_teacher_class_description
     - paragraphs.paragraphs_type.vih_webform
   module:
@@ -55,7 +54,6 @@ settings:
       user_quote: user_quote
       video: video
       vih_class_groups_accordion: vih_class_groups_accordion
-      vih_single_class_group: vih_single_class_group
       vih_teacher_class_description: vih_teacher_class_description
       vih_webform: vih_webform
     target_bundles_drag_drop:
@@ -129,8 +127,8 @@ settings:
         weight: 47
         enabled: false
       vih_single_class_group:
-        enabled: true
         weight: 48
+        enabled: false
       vih_teacher_class_description:
         enabled: true
         weight: 49
