--- a/config/sync/field.field.taxonomy_term.vih_class.field_vih_paragraphs.yml
+++ b/config/sync/field.field.taxonomy_term.vih_class.field_vih_paragraphs.yml
@@ -19,7 +19,6 @@ dependencies:
     - paragraphs.paragraphs_type.user_quote
     - paragraphs.paragraphs_type.video
     - paragraphs.paragraphs_type.vih_class_groups_accordion
-    - paragraphs.paragraphs_type.vih_single_class_group
     - paragraphs.paragraphs_type.vih_teacher_class_description
     - paragraphs.paragraphs_type.vih_webform
     - taxonomy.vocabulary.vih_class
@@ -55,7 +54,6 @@ settings:
       video: video
       vih_class_groups_accordion: vih_class_groups_accordion
       long_course_list_contain_class: long_course_list_contain_class
-      vih_single_class_group: vih_single_class_group
       vih_teacher_class_description: vih_teacher_class_description
       vih_webform: vih_webform
     target_bundles_drag_drop:
@@ -132,8 +130,8 @@ settings:
         weight: 43
         enabled: false
       vih_single_class_group:
-        enabled: true
         weight: 44
+        enabled: false
       vih_teacher_class_description:
         enabled: true
         weight: 45
