--- a/config/sync/paragraphs.paragraphs_type.list_of_news_teasers.yml
+++ b/config/sync/paragraphs.paragraphs_type.list_of_news_teasers.yml
@@ -5,5 +5,5 @@ dependencies: {  }
 id: list_of_news_teasers
 label: 'Liste af nyhedsteasere'
 icon_uuid: null
-description: null
+description: 'Viser nyhedsteasere udfra tags'
 behavior_plugins: {  }
