--- a/config/sync/paragraphs.paragraphs_type.video.yml
+++ b/config/sync/paragraphs.paragraphs_type.video.yml
@@ -5,5 +5,5 @@ dependencies: {  }
 id: video
 label: Video
 icon_uuid: null
-description: null
+description: 'Afsnit med mulighed for visning af video'
 behavior_plugins: {  }
