--- a/config/sync/field.field.paragraph.video.field_vih_background_img.yml
+++ b/config/sync/field.field.paragraph.video.field_vih_background_img.yml
@@ -10,7 +10,7 @@ id: paragraph.video.field_vih_background_img
 field_name: field_vih_background_img
 entity_type: paragraph
 bundle: video
-label: 'Background image'
+label: Baggrundsbillede
 description: ''
 required: false
 translatable: false
